2010-12-20  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16778: Test failures in t3lib_tree_NodeTest if tests are in typo3_src/tests/ instead of tests/ (Thanks to Oliver Klee)
	* Follow-up to #16031: forgotten field recursive for plugins
	* Fixed bug #16780: PHP warning in any system BE module

2010-12-19  Steffen Gebert  <steffen@steffen-gebert.de>

	* Follow-up to #16779: t3lib_cache_backend_RedisBackendTest causes t3lib_db_PreparedStatementTest tests to fail (Thanks to Oliver Klee)
	* Fixed bug #16777: Test failure in t3lib_extmgmTest if tests are located in typo3_src/tests/ instead of tests/ (Thanks to Oliver Klee)
	* Fixed bug #16790: Typo in topbar CSS

2010-12-18  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #16771: Change ugly formatting of "pageNotFound_handling" and "pageUnavailable_handling"

2010-12-18  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16773: User icon in topbar shows part of neighbour sprite icon
	* Fixed bug #16465: Bug: TCE forms incorrectly render optgroup tags with icons (Thanks to Bastian Waidelich)
	* Fixed bug #16776: Unit test crashes in t3lib_tree_SortedNodeCollectionTest (Thanks to Oliver Klee)
	* Fixed bug #16779: t3lib_cache_backend_RedisBackendTest causes t3lib_db_PreparedStatementTest tests to fail (Thanks to Oliver Klee)

2010-12-17  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #16209: new sysexts need proper icons in extension manager (thanks to Simon Schaufelberger)
	* Fixed bug #5186: fixed rendering of multi-column image rows (thanks to Michael Bürgi)
	* Fixed bug #16768: link to single table view in list module is not working anymore.

2010-12-17  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #16703: TCEForms->getIconHTML() does not resolve back paths before checking static files

2010-12-17  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9002: exec_SELECTquery() has wrong documentation: Third parameter (WHERE clause) is NOT optional

2010-12-17  Ingo Renner  <ingo@typo3.org>