@@ -490,13 +490,18 @@ final class t3lib_div {
 			if (($type == 'IM' || !$type) && $gfxConf['im'] && $gfxConf['im_path_lzw']) { // IM
 				$cmd = self::imageMagickCommand('convert', '"' . $theFile . '" "' . $theFile . '"', $gfxConf['im_path_lzw']);
 				exec($cmd);
-
 				$returnCode = 'IM';
+				if (@is_file($theFile)) {
+					self::fixPermissions($theFile);
+				}
 			} elseif (($type == 'GD' || !$type) && $gfxConf['gdlib'] && !$gfxConf['gdlib_png']) { // GD
 				$tempImage = imageCreateFromGif($theFile);
 				imageGif($tempImage, $theFile);
 				imageDestroy($tempImage);
 				$returnCode = 'GD';
+				if (@is_file($theFile)) {
+					self::fixPermissions($theFile);
+				}
 			}
 		}
 		return $returnCode;
@@ -520,6 +525,9 @@ final class t3lib_div {
 			$cmd = self::imageMagickCommand('convert', '"' . $theFile . '" "' . $newFile . '"', $GLOBALS['TYPO3_CONF_VARS']['GFX']['im_path_lzw']);
 			exec($cmd);
 			$theFile = $newFile;
+			if (@is_file($newFile)) {
+				self::fixPermissions($newFile);
+			}
 				// unlink old file?? May be bad idea bacause TYPO3 would then recreate the file every time as TYPO3 thinks the file is not generated because it's missing!! So do not unlink $theFile here!!
 		}
 		return $theFile;
@@ -547,6 +555,7 @@ final class t3lib_div {
 				$cmd = self::imageMagickCommand('convert', '"' . $theFile . '" "' . $newFile . '"', $GLOBALS['TYPO3_CONF_VARS']['GFX']['im_path']);
 				exec($cmd);
 				if (@is_file($newFile)) {
+					self::fixPermissions($newFile);
 					return $newFile;
 				}
 			}
@@ -5996,6 +6005,7 @@ final class t3lib_div {
 					fwrite($file, date($dateFormat . ' ' . $timeFormat) . $msgLine . LF);
 					flock($file, LOCK_UN); // release the lock
 					fclose($file);
+					self::fixPermissions($destination);
 				}
 			}
 				// send message per mail
@@ -6075,6 +6085,7 @@ final class t3lib_div {
 				@fwrite($file, $date . $msg . LF);
 				flock($file, LOCK_UN); // release the lock
 				@fclose($file);
+				self::fixPermissions($destination);
 			}
 		}
 
