@@ -1,3 +1,7 @@
+2010-12-20  Tolleiv Nietsch  <typo3@tolleiv.de>
+
+	* Fixed bug #16134: TYPO3 doesn't always fix permissions for new files
+
 2010-12-20  Steffen Kamper  <steffen@typo3.org>
 
 	* Fixed bug #16778: Test failures in t3lib_tree_NodeTest if tests are in typo3_src/tests/ instead of tests/ (Thanks to Oliver Klee)
